--- a/src/components/MultiStepForm.css
+++ b/src/components/MultiStepForm.css
@@ -566,6 +566,10 @@ button:disabled {
   h1 {
     font-size: 2.2rem;
     margin-bottom: 1.5rem;
+    max-width: calc(100% - 6rem);
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.2;
   }
 
   h2 {
